--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-DD_API_KEY=***
-DD_APP_KEY=***
-DD_SITE=datadoghq.com
+DD_API_KEY=55411ff945515740e8760eb1bcf405f5
+DD_APP_KEY=725bc20afbe6164d27538bdc2901e57455de6ebb
+DD_SITE=datadoghq.eu
